corrected distortion on image in software page

--- a/src/assets/scss/_software-solutions.scss
+++ b/src/assets/scss/_software-solutions.scss
@@ -27,10 +27,9 @@
 
 .software-responsive-images-callout {
   background-color: $glorykidd-gold-trans;
-  z-index: -1;
+  display: table;
 }
 
 .software-responsive-images {
-  background-color: $color-glorykidd-gold;
   padding: 1em;
 }
